<resources>
    <string name="app_name">SufWms</string>

    <string name="ip_web_address">ip_web_address_for_service</string>
    <string name="ip_web_address_1">ip_web_address_1_for_service</string>
    <string name="language">language</string>
    <string name="language_1">language_1</string>
    <string name="save_success_message">Saved Successfully </string>

    <!-- Login Activity -->
    <string name="title_form_login">Login</string>
    <string name="failed_login">Invalid Login Attempt</string>
    <string name="label_button_register">Register</string>
    <string name="label_login_header">Login</string>
    <string name="label_default_login">No Login Attempted</string>
    <string name="label_user_name">User Name</string>
    <string name="label_password">Password</string>
    <string name="label_button_login">Login</string>
    <string name="label_button_settings">Settings</string>
    <string name="wait_message">Please Wait...</string>

    <!-- Settings Activity -->
    <string name="title_form_settings">Settings</string>
    <string name="hint_service_url">Service URL</string>
    <string name="label_button_save_settings">Save</string>
    <string name="label_settings_header">Set The URL of the Service</string>

    <!-- Scanner Activity -->
    <string name="title_form_scanner">Scan Barcode</string>
    <string name="label_scan_qr_code_in">Scan QR Code at the document</string>
    <string name="barcode_scanner_started">Barcode Scanner Started..</string>

    <!-- Page Headings  -->
    <string name="heading_scan_page">Scan Products</string>
    <string name="title_activity_landing">LandingActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_bookingin">BookingIn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>